# quantum-resistant-encryption-playground

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai/: __init__.py  lattice_optimizer.py  parameter_optimization.py
ai/utils/: __init__.py  data_handler.py
data/: encryption_times.csv
docs/: 01_pqc_overview.md  02_lattice_cryptography.md  03_quantum_computing_basics.md
examples/: 01_ml_kem_keygen.py  02_ml_dsa_signatures.py  03_classical_vs_pqc.py  README.md
kyber/ref/: Makefile
quantum/: __init__.py  bb84_simulation.py  grovers_simulation.py  shors_simulation.py
scripts/: benchmark_runner.py  download_kyber.py  generate_benchmarks.py
tests/: test_ai.py  test_examples.py  test_grovers.py  test_shors.py
